--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@openai/agents": "^0.0.5",
     "@radix-ui/react-icons": "^1.3.2",
     "dotenv": "^16.4.7",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "openai": "^4.77.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
     "uuid": "^11.0.4",
     "zod": "^3.24.1"
@@ -24,8 +24,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "14.2.5",
